--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,4 @@
-<h2>TO DO APP</h2>
-<%= link_to "CREATE NEW TASK", "/tasks/new" %>
+<%= link_to "CREATE NEW TASK", "/tasks/new" , class: "btn btn-primary"%>
 <h2> 【TASK LIST】 </h2>
 <% @tasks.each do |task| %>
     <p> ・<%= task.title %><%= link_to "DELETE" , "/tasks/" + task.id.to_s, method: :delete %></p>
