--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
 <h2>CREATE NEW TASK</h2>
 <%= form_with url: "/tasks/create", local: true do |f| %>
     <p><%= f.text_field :title %></p>
-    <p><%= f.submit "CREATE" %></p>
+    <p><%= f.submit "CREATE", class:"btn btn-primary" %></p>
 <% end %>
